[package]
name = "aios-integration"
description = "AIOS L10 System Integration Layer typed core skeleton — closed vocabularies, error taxonomy, and identifier types for S11.4 (M18 open)."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "aios-system"
path = "src/bin/aios_system.rs"

[dependencies]
aios-action     = { path = "../aios-action" }
aios-evidence   = { path = "../aios-evidence" }
aios-policy     = { path = "../aios-policy" }
aios-sgr        = { path = "../aios-sgr" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
chrono          = { workspace = true }
ulid            = { workspace = true }
tokio           = { workspace = true, features = ["sync", "macros", "rt"] }
async-trait     = { workspace = true }
tracing         = { workspace = true }
clap            = { workspace = true, features = ["derive"] }
ed25519-dalek   = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
chrono      = { workspace = true }
rand_core   = { workspace = true }
ed25519-dalek = { workspace = true }
assert_cmd  = "2"
predicates  = "3"

[lints]
workspace = true
