[package]
name = "aios-integration"
description = "AIOS L10 System Integration Layer typed core skeleton — closed vocabularies, error taxonomy, and identifier types for S11.4 (M18 open)."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "aios-system"
path = "src/bin/aios_system.rs"

build = "build.rs"

[dependencies]
aios-action     = { path = "../aios-action" }
aios-evidence   = { path = "../aios-evidence" }
aios-policy     = { path = "../aios-policy" }
aios-sgr        = { path = "../aios-sgr" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
chrono          = { workspace = true }
ulid            = { workspace = true }
tokio           = { workspace = true, features = ["sync", "macros", "rt"] }
tokio-stream    = { workspace = true }
async-trait     = { workspace = true }
tracing         = { workspace = true }
clap            = { workspace = true, features = ["derive"] }
ed25519-dalek   = { workspace = true }
tonic           = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = { workspace = true }
chrono      = { workspace = true }
rand_core   = { workspace = true }
ed25519-dalek = { workspace = true }
assert_cmd  = "2"
predicates  = "3"

[lints]
workspace = true
