[package]
name = "aios-mobile"
description = "AIOS S23 mobile/voice surface typed core skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
aios-policy = { path = "../aios-policy" }
aios-cognitive = { path = "../aios-cognitive" }
aios-vault = { path = "../aios-vault" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
ulid = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
aios-evidence = { path = "../aios-evidence" }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
