[package]
name = "aios-policy"
description = "AIOS S2.3 — Policy Kernel core types (rev.2 aios.policy.v1alpha1)."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action  = { path = "../aios-action" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
# T-017: PolicyKernel trait + 12-step decision pipeline. The trait is `async`
# (the production gRPC surface in T-023 is async; the trait shape must match
# so the impls flow through without an adapter layer); `async-trait` is the
# canonical macro for declaring an object-safe async trait on stable Rust.
# `tokio` is the runtime used by tests (`#[tokio::test]`); only the `macros`
# + `rt` features are pulled in because the in-memory pipeline does no I/O
# and does not need the full multi-threaded runtime. `ulid` mints fresh
# `policy_decision_id` strings per evaluation (S2.3 §4 field 1 — `poldec_<ULID>`).
async-trait  = { workspace = true }
tokio        = { workspace = true }
ulid         = { workspace = true }

[lints]
workspace = true
