[package]
name = "aios-policy"
description = "AIOS S2.3 — Policy Kernel core types (rev.2 aios.policy.v1alpha1)."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action  = { path = "../aios-action" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
# T-017: PolicyKernel trait + 12-step decision pipeline. The trait is `async`
# (the production gRPC surface in T-023 is async; the trait shape must match
# so the impls flow through without an adapter layer); `async-trait` is the
# canonical macro for declaring an object-safe async trait on stable Rust.
# `tokio` is the runtime used by tests (`#[tokio::test]`); only the `macros`
# + `rt` features are pulled in because the in-memory pipeline does no I/O
# and does not need the full multi-threaded runtime. `ulid` mints fresh
# `policy_decision_id` strings per evaluation (S2.3 §4 field 1 — `poldec_<ULID>`).
async-trait  = { workspace = true }
tokio        = { workspace = true }
ulid         = { workspace = true }
# T-022: policy bundle loader (S2.3 §12). The bundle is distributed as a
# signed JSON envelope: a canonical body (deterministic serde_json output) is
# hashed (BLAKE3), the hash is signed with Ed25519 by the publisher key, and
# the signature ships next to the body. `signing_authority` selects the
# verifying key from the trust store the loader is constructed with.
ed25519-dalek = { workspace = true }
blake3        = { workspace = true }
# T-024: RFC 8785 JSON Canonicalization Scheme for the
# `EnrichmentSnapshot::compute_id()` content-address. The same RFC-8785
# canonicaliser as aios-action::canonical (S0.1 §8.5). Determinism for the
# §13 triple's third component depends on this; without canonical JCS the
# snapshot id would drift between processes / architectures.
serde_jcs     = { workspace = true }
# Base64-STANDARD-encoded signature bytes inside the JSON envelope (raw Ed25519
# signatures are 64 bytes — embedding them as base64 keeps the bundle JSON
# human-readable and round-trip-safe under serde).
base64        = { workspace = true }
# T-023: gRPC service surface (S2.3 §20 / Appendix A). Mirrors the aios-evidence
# T-011 wiring exactly — tonic provides the runtime server/client transports,
# prost is the generated-code dependency (proto3 message types), tokio is the
# async runtime (mandatory for tonic), prost-types carries the well-known
# `google.protobuf.Timestamp` / `google.protobuf.Struct` / `google.protobuf.Empty`
# definitions referenced by the IDL.
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
# T-024: bounded LRU for the §13.2 / §13.3 decision cache. Held behind
# `Arc<RwLock<>>` in `SharedDecisionCache` so the gRPC adapter can share one
# cache across worker tasks. Capacity is configurable per ctor; default 1 024.
lru          = { workspace = true }

[build-dependencies]
# T-023: tonic-build invokes `protoc` and emits the Rust server stubs
# (`policy_kernel_server::*`) + client stubs (`policy_kernel_client::*`) into
# `OUT_DIR`. See `build.rs` for the invocation; see `src/service/mod.rs` for
# the `include_proto!` glue. The `protoc-bin-vendored` crate provides a
# pre-built protoc binary so the build does not require a system install.
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
# Tests mint ephemeral Ed25519 keypairs via the OS CSPRNG. Production never
# does — keys come from S5.2 (mirrors the aios-evidence T-009 pattern).
rand_core    = { workspace = true }
# T-023: gRPC integration tests need the multi-threaded tokio runtime, the
# `oneshot` channel for deterministic server shutdown, and the tonic transport
# client for in-process round-trips. The base dependency above is dev-only;
# pulling in the full feature flags via dev-dependencies keeps the production
# binary surface lean (we do not need `tokio::time`, `signal`, etc. in the
# library).
tokio       = { workspace = true }
# T-024: criterion microbench for the §18.1 perf-budget probe. Bench targets
# under benches/*.rs are compiled with `--bench` and consume this dep only.
# Informational: thresholds are not enforced in `cargo test`; CI integration
# lands in T-025+.
criterion   = { workspace = true }

[[bench]]
name = "policy_eval"
harness = false

[lints]
workspace = true
