[package]
name = "aios-recovery"
description = "AIOS S9 recovery, first-boot, and dedicated kernel typed core skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
ulid         = { workspace = true }
blake3       = { workspace = true }

[lints]
workspace = true
