[package]
name = "aios-recovery"
description = "AIOS S9 recovery, first-boot, and dedicated kernel typed core skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
aios-capability-runtime = { path = "../aios-capability-runtime" }
aios-evidence = { path = "../aios-evidence" }
aios-fs     = { path = "../aios-fs" }
aios-policy = { path = "../aios-policy" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
ed25519-dalek = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt"] }
ulid         = { workspace = true }
blake3       = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

[dev-dependencies]
aios-renderer-cli = { path = "../aios-renderer-cli" }
aios-vault = { path = "../aios-vault" }
aios-verification = { path = "../aios-verification" }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
