[package]
name = "aios-renderer-cli"
description = "AIOS S7.6 CLI renderer core types and renderable skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
aios-capability-runtime = { path = "../aios-capability-runtime" }
aios-evidence = { path = "../aios-evidence" }
aios-fs = { path = "../aios-fs" }
aios-policy = { path = "../aios-policy" }
aios-vault = { path = "../aios-vault" }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
prost        = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tonic        = { workspace = true }

[[bin]]
name = "aios"
path = "src/main.rs"

[lints]
workspace = true
