[package]
name = "aios-sgr"
description = "AIOS Service Graph Runtime typed core skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
ed25519-dalek = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt", "sync"] }
ulid         = { workspace = true }
blake3       = { workspace = true }

[lints]
workspace = true
