[package]
name = "aios-time"
description = "AIOS S28 Constitutional Time Plane — trusted time posture, skew detection, and consequential action gating."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
aios-policy = { path = "../aios-policy" }
aios-evidence = { path = "../aios-evidence" }
aios-network = { path = "../aios-network" }
aios-recovery = { path = "../aios-recovery" }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
ulid         = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
