[package]
name = "aios-vault"
description = "AIOS S5.1/S5.2/S5.4 — vault identity, capability, and override core types."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action  = { path = "../aios-action" }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
ulid         = { workspace = true }
blake3       = { workspace = true }

[lints]
workspace = true
