[package]
name = "aios-vault"
description = "AIOS S5.1/S5.2/S5.4 — vault identity, capability, and override core types."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
aios-action  = { path = "../aios-action" }
aios-evidence = { path = "../aios-evidence" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt"] }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
ulid         = { workspace = true }
blake3       = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core      = { workspace = true }
aes-gcm        = { workspace = true }
hmac           = { workspace = true }
sha2           = { workspace = true }
hkdf           = { workspace = true }
x25519-dalek   = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
